--- a/styles.css
+++ b/styles.css
@@ -503,6 +503,7 @@ header {
     font-size: 12px;
     margin-top: 10px;
     font-weight: 600;
+    margin-bottom: 10px;
 }
 
 .stock-status.out-of-stock {
